--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
 	<div class="da">
 		<div class="seperate-block">
 			<div class="a" style="position: relative;">
-				<img src="index.image/a.png" alt="" style="position:absolute;left:20px;top:20px;">
+				<a href="https://maxiaoyand.github.io/yhyy/index4.html">
+					<img src="index.image/a.png" alt="" style="position:absolute;left:20px;top:20px;">
+				</a>
 				<p style="position: absolute;color:#000;font-size:20px;left:20px;top:350px;">云南丽江、大理、香格里拉6晚7日</p>
 				<p style="position: absolute;color:#d5d5d5;font-size:20px;left:20px;top:390px;">（纯玩、冰川大索道、洱海大游船）</p>
 				<img src="index.image/a1.png" alt="" style="position: absolute;left:104px;top:440px;">
